# Scrape-Tokenize-whole-website-for-LLMs

./: README.md  main.py  pyproject.toml
web_text_scraper/: allfly.txt  parser.py  scraper.py  utils.py
