[tool.poetry]
name = "Project"
version = "0.1.0"
description = ""
authors = ["faisal-fida arainfaisal826@gmail.com"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
beautifulsoup4 = "^4.12"
requests = "^2.31"
lxml = "^5.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
